# nix-storage-plugin

./: .gitignore  .rgignore  AGENTS.md  Cargo.nix  Cargo.toml  HANDOFF.md  README.md  build.rs  flake.nix  skills-lock.json  typos.toml
.config/: nextest.toml
.pi/skills/: hegel
nix/: devshell.nix  nixos.nix  overlay.nix  rust.nix  treefmt.nix
src/: common.rs  flake_ref.rs  lib.rs  local_image.rs  main.rs  metadata.rs  nix.rs  nix_metadata.rs  oci.rs  registry.rs  skopeo.rs  storage_config.rs
src/layer_store/: fs.rs  mod.rs  resolver.rs
tests/: e2e_podman.rs
