[package]
name = "nix-storage-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
async-signal = "0.2.13"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
fuse3 = { version = "0.9.0", features = ["unprivileged", "async-io-runtime"] }
futures-util = "0.3.32"
libc = "0.2.183"
nix = "0.31.2"
smol = "2.0.2"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
base64 = "0.22.1"
flate2 = "1.1.4"
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
hyper = { version = "1.7.0", features = ["server", "http1"] }
http-body-util = "0.1.3"
async-io = "2.6.0"
futures-lite = "2.6.1"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
async-process = "2.5.0"
smol-hyper = "0.1.1"
tempfile = "3.23.0"
oci-spec = "0.9.0"
procfs = "0.18.0"
toml = "0.9.8"

[dev-dependencies]
hegel = { package = "hegeltest", version = "0.5.1" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(no_test_network)"] }
